[tool.poetry]
name = "my"
version = "0.1.0"
description = ""
authors = ["Ekaterina Myasnikova <keti200901@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
say-HI = "my.script.say_HI:main"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
